--- a/public/home.css
+++ b/public/home.css
@@ -19,8 +19,8 @@ h1 {
     color: #444;
 }
 
-/* Nav Bar */
-/* Navbar Styles */
+/* Nav bar */
+
 .navbar {
     background-color: #333; /* Dark background */
     color: #fff; /* White text */
