--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,8 @@
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
             <ul class="nav-links">
-                <li><a href="../about">About</a></li>
-                <li><a href="../users/register">Register</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/users/register">Register</a></li>
             </ul>
         </div>
     </nav>
