--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,9 +13,9 @@
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
             <ul class="nav-links">
-                <li><a href="../">Home</a></li>
-                <li><a href="../about">About</a></li>
-                <li><a href="../favourites">Favourites</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/favourites">Favourites</a></li>
             </ul>
         </div>
     </nav>
