--- a/public/login.css
+++ b/public/login.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
-    background-image: url('/public/images/Mbg.jpg'); 
+    background-image: url('/public/images/Mbg.jpeg'); /* Correct file extension */
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
