--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,14 +22,13 @@
       <h1>Login</h1>
       <form method="POST" action="/users/logged" class="register-form">
         <label for="username">Username:</label>
-          <input id="username" name="username" type="text" required>
-          
-          <label for="password">Password:</label>
-          <input id="password" name="password" type="password" required>
-          
-          <input type="submit" value="Register">
+        <input id="username" name="username" type="text" required>
+        
+        <label for="password">Password:</label>
+        <input id="password" name="password" type="password" required>
+        
+        <input type="submit" value="Login">
       </form>
   </div>
-  
 </body>
 </html>
