--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,7 +26,7 @@
     <!-- Register Form -->
     <div class="register-container">
         <h1>Register</h1>
-        <form class="register-form" action="/users/register" method="POST">
+        <form class="register-form" action="/users/registered" method="POST">
             <label for="email">Email:</label>
             <input type="text" id="email" name="email" required>
 
