--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <!-- Register Form -->
+    <!-- Register Forms -->
     <div class="register-container">
         <h1>Register</h1>
         <form class="register-form" action="/users/registered" method="POST">
