--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
             <ul class="nav-links">
-                <li><a href="/about">About</a></li>
+                <li><a href="../about">About</a></li>
                 <li><a href="/users/register">Register</a></li>
             </ul>
         </div>
