--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,6 +15,8 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/favourites">Favourites</a></li>
+                <li><a href="/recommended">Recommended</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </nav>
