--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,13 +9,15 @@
 <body>
     
     <!-- Navigation Bar -->
-     <nav class="navbar">
+    <nav class="navbar">
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/favourites">Favourites</a></li>
+                <li><a href="/recommended">Recommended</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </nav>
