--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="/public/login.css">
 </head>
 <body>
+    <div class="background-image">
+        <img src="/public/images/Mbg.jpeg" alt="Background" class="bg-image">
+    </div>
+    
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
             <ul class="nav-links">
-                <li><a href="../about">About</a></li>
                 <li><a href="/users/register">Register</a></li>
+                <li><a href="/users/about">About</a></li>
             </ul>
         </div>
     </nav>
