--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,8 +17,8 @@
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
             <ul class="nav-links">
-                <li><a href="/about">About</a></li>
                 <li><a href="/users/login">Login</a></li>
+                <li><a href="/users/about">About</a></li>
             </ul>
         </div>
     </nav>
