--- a/public/login.css
+++ b/public/login.css
@@ -1,3 +1,20 @@
+.background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Push the image behind other elements */
+}
+
+.bg-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image covers the entire viewport */
+}
+
+
+
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
@@ -5,10 +22,6 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
-    background-image: url('/public/images/Mbg.jpeg'); /* Correct file extension */
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
 }
 
 /* Navbar */
