--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,12 +12,10 @@
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
             <ul class="nav-links">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/favourites">Favourites</a></li>
-                <li><a href="/recommended">Recommended</a></li>
-                <li><a href="/logout">Logout</a></li>
-            </ul>
+                <li><a href="/users/login">Login</a></li>
+                <li><a href="/users/register">Register</a></li>
+                <li><a href="/users/about">About</a></li>
+                </ul>
         </div>
     </nav>
 
