--- a/views/favourites.ejs
+++ b/views/favourites.ejs
@@ -71,7 +71,7 @@
                 <% }) %>
             </div>
         <% } else { %>
-            <p>No movies saved yet. Start saving your favorite movies!</p>
+            <p>No movies saved yet. Start saving your favorite movies from Home.</p>
         <% } %>
     </div>
 </body>
