--- a/views/recommended.ejs
+++ b/views/recommended.ejs
@@ -37,7 +37,7 @@
                 <% }) %>
             </div>
         <% } else { %>
-            <p>No recommended movies at the moment. Rate some movies to get recommendations!</p>
+            <p>No recommended movies at the moment. Rate some movies to get recommendations from favourites</p>
         <% } %>
     </div>
 </body>
