--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,10 +26,10 @@
       <h1>Login</h1>
       <form method="POST" action="/users/logged" class="register-form">
         <label for="username">Username:</label>
-        <input id="username" name="username" type="text" required>
+        <input id="username" name="username" type="text" maxlength="30" required>
         
         <label for="password">Password:</label>
-        <input id="password" name="password" type="password" required>
+        <input id="password" name="password" type="password" maxlength="20" required>
         
         <input type="submit" value="Login">
       </form>
