--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/public/login.css">
+    <link rel="stylesheet" href="/public/register.css">
 </head>
 <body>
     <div class="background-image">
@@ -16,7 +16,7 @@
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
             <ul class="nav-links">
-                <li><a href="/users/register">Register</a></li>
+                <li><a href="/users/login">Login</a></li>
                 <li><a href="/users/about">About</a></li>
             </ul>
         </div>
