--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,7 @@
 
     <div class="register-container">
       <h1>Login</h1>
-      <form method="POST" action="/users/logged" class="register-form">
+      <form method="POST" action="/users/registered" class="register-form">
         <label for="username">Username:</label>
         <input id="username" name="username" type="text" maxlength="30" minlength="5">
         
