--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
     </nav>
 
     <div class="register-container">
-      <h1>Login</h1>
+      <h1>Register</h1>
       <form method="POST" action="/users/registered" class="register-form">
         <label for="username">Username:</label>
         <input id="username" name="username" type="text" maxlength="30" minlength="5">
