--- a/public/register.css
+++ b/public/register.css
@@ -110,7 +110,8 @@ body {
 }
 
 .register-form input[type="text"],
-.register-form input[type="password"] {
+.register-form input[type="password"],
+.register-form input[type="email"] {
     width: 95%;
     margin-top: 5px;
     padding: 10px;
@@ -119,6 +120,7 @@ body {
     border-radius: 5px;
     font-size: 1rem;
 }
+
 
 .register-form input[type="submit"] {
     width: 100%;
