--- a/public/login.css
+++ b/public/login.css
@@ -4,13 +4,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; /* Push the image behind other elements */
+    z-index: -1; 
 }
 
 .bg-image {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the image covers the entire viewport */
+    object-fit: cover; 
 }
 
 
@@ -70,7 +70,7 @@ body {
 }
 
 .nav-links a:hover {
-    color: #007BFF; /* Highlight color on hover */
+    color: #007BFF; 
 }
 
 /* Register Container Styles */
