--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <!-- Navigation Bar -->
+    <!-- Navigation Bar below -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
