--- a/public/about.css
+++ b/public/about.css
@@ -22,25 +22,29 @@ h1 {
 
 /* Nav bar */
 .navbar {
-    background-color: #333; 
-    color: #fff; 
+    width: 100%;
+    background: #000000;
+    color: #fff;
     padding: 10px 20px;
     position: sticky;
     top: 0;
     z-index: 1000;
+    display: flex;
+    justify-content: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
 }
 
 .nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
 }
 
 .nav-logo {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: bold;
     color: #fff;
     text-decoration: none;
@@ -66,5 +70,5 @@ h1 {
 }
 
 .nav-links a:hover {
-    color: #007BFF;  
+    color: #007BFF;
 }
