--- a/public/home.css
+++ b/public/home.css
@@ -208,6 +208,7 @@ button {
     color: #fff; 
     border: none; 
     padding: 10px 15px; 
+    margin-bottom: 6px;
     font-size: 14px; 
     font-weight: bold; 
     border-radius: 5px; 
