--- a/public/favourites.css
+++ b/public/favourites.css
@@ -162,6 +162,7 @@ body {
 
 .movie-card button {
     padding: 10px;
+    margin-top: 10px;
     width: 100%;
     background-color: #007BFF;
     color: #fff;
