--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,17 +22,17 @@
         </div>
     </nav>
 
-    <div class="register-container">
-      <h1>Login</h1>
-      <form method="POST" action="/users/logged" class="register-form">
-        <label for="username">Username:</label>
-        <input id="username" name="username" type="text" maxlength="30" required>
-        
-        <label for="password">Password:</label>
-        <input id="password" name="password" type="password" maxlength="20" required>
-        
-        <input type="submit" value="Login">
-      </form>
-  </div>
+    <div class="login-container">
+        <h1>Login</h1>
+        <form method="POST" action="/users/logged" class="login-form">
+            <label for="username">Username:</label>
+            <input id="username" name="username" type="text" maxlength="30" required>
+            
+            <label for="password">Password:</label>
+            <input id="password" name="password" type="password" maxlength="20" required>
+            
+            <input type="submit" value="Login">
+        </form>
+    </div>
 </body>
 </html>
