--- a/public/home.css
+++ b/public/home.css
@@ -25,7 +25,7 @@ h1 {
 /* Navbar */
 .navbar {
     width: 100%;
-    background: #000000;
+    background: rgb(0, 0, 0);
     color: #fff;
     padding: 10px 20px;
     position: sticky;
@@ -72,7 +72,7 @@ h1 {
 }
 
 .nav-links a:hover {
-    color: #007BFF;
+    color: #ffa600;
 }
 
 
@@ -110,7 +110,7 @@ h1 {
 }
 
 .search-container button:hover {
-    background-color: #0056b3;
+    background-color: #3eaf05;
 }
 
 
@@ -204,7 +204,7 @@ h1 {
 }
 
 button {
-    background-color: #007BFF; 
+    background-color: #ffa600; 
     color: #fff; 
     border: none; 
     padding: 10px 15px; 
@@ -218,7 +218,7 @@ button {
 
 /* Hover effect */
 button:hover {
-    background-color: #0056b3; 
+    background-color: #ff6f00; 
     transform: scale(1.05); 
 }
 
