--- a/public/register.css
+++ b/public/register.css
@@ -36,7 +36,7 @@ body {
 /* Navbar */
 .navbar {
     width: 100%;
-    background: #000000;
+    background: #000000c1;
     color: #fff;
     padding: 10px 20px;
     position: sticky;
@@ -83,7 +83,7 @@ body {
 }
 
 .nav-links a:hover {
-    color: #007BFF;
+    color: #ff8000;
 }
 
 .register-container {
@@ -143,15 +143,15 @@ body {
 .register-form input[type="password"]:focus,
 .register-form input[type="email"]:focus {
     outline: none;
-    border-color: #00ffdd;
+    border-color: #ffa600;;
     background: rgba(255, 255, 255, 0.3);
-    box-shadow: 0 0 8px #00ffdd;
+    box-shadow: 0 0 8px #ff0000;
 }
 
 .register-form input[type="submit"] {
     width: 100%;
     padding: 12px;
-    background: linear-gradient(135deg, #007BFF, #00ffdd);
+    background: linear-gradient(135deg, #ff0000, #ffa600);
     color: #fff;
     border: none;
     border-radius: 25px;
@@ -163,7 +163,7 @@ body {
 }
 
 .register-form input[type="submit"]:hover {
-    background: linear-gradient(135deg, #0056b3, #007BFF);
+    background: linear-gradient(135deg, #ff8000, #ffd500);
     transform: translateY(-2px);
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.6);
 }
