--- a/views/favourites.ejs
+++ b/views/favourites.ejs
@@ -15,6 +15,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/favourites">Favourites</a></li>
                 <li><a href="/recommended">Recommended</a></li>
+                <li><a href="/apiKey">API</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
