--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <!-- Navigation Bar below -->
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="/" class="nav-logo">MovieDB</a>
@@ -16,6 +16,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/favourites">Favourites</a></li>
                 <li><a href="/recommended">Recommended</a></li>
+                <li><a href="/apiKey">API</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
